fixed spacing

--- a/main.css
+++ b/main.css
@@ -84,7 +84,7 @@ body.sticky-bottom-footer {
 }
 
 .container {
-  max-width: 900px;
+  max-width: 875px;
 }
 
 .profile img {
